--- a/public/css/meusSimulados.css
+++ b/public/css/meusSimulados.css
@@ -1,5 +1,13 @@
+html, body {
+    height: 100%; /* Ensures html is 100% of the viewport */
+    margin: 0; /* Removes default margin */
+}
+
+
 body {
     font-family: Arial, sans-serif;
+    min-height: 100vh; /* Body takes at least full viewport height */
+    background-color: #f5f5f5;
 }
 
 main {
