--- a/public/css/minhasquestoes.css
+++ b/public/css/minhasquestoes.css
@@ -4,10 +4,18 @@
     padding: 0;
     box-sizing: border-box;
 }
+html, body {
+    height: 100%; /* Ensures html is 100% of the viewport */
+    margin: 0; /* Removes default margin */
+}
 
 body {
-
-    background-color: #f5f5f5;
+    min-height: 100vh; /* Body takes at least full viewport height */
+    background-color: #f5f5f5; /* Your desired background color */
+}
+main{
+    width:100%;
+    height: 100%;
 }
 
 .container {
