--- a/views/partials/quillandUIkit.ejs
+++ b/views/partials/quillandUIkit.ejs
@@ -13,5 +13,8 @@
 <link rel="stylesheet" href="/css/uikit.min.css" />
 <script src="/js/uikit.min.js"></script>
 <script src="/js/uikit-icons.min.js"></script>
-<link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
-<script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
+<!-- <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
+<script src="https://cdn.quilljs.com/1.3.6/quill.js"></script> -->
+<link href="/css/quill.snow.css" rel="stylesheet">
+<script src="/js/quill.js"></script>
+<!-- <script src="/js/quill.core.js"></script> -->
