--- a/views/desenvolvedores/timeDesenvolvimento.ejs
+++ b/views/desenvolvedores/timeDesenvolvimento.ejs
@@ -78,14 +78,14 @@
     <div class="card" data-index="0">
       <div class="card__inner">
         <div class="card__image-container">
-          <img class="card__image" src="/img/desenvolvedores/perfil.png" alt=""/>
+          <img class="card__image" src="/img/desenvolvedores/Cristian.png" alt=""/>
         </div>
         <div class="card__content">
-          <h1 class="card__title">Cristhian ...</h1>
-          <span class="card__function">Desenvolvedor da plataforma</span>
+          <h1 class="card__title">Cristhian</h1>
+          <span class="card__function">Desenvolvedor da plataforma, recriando-a em uma nova linguagem</span>
 
           <p class="card__description">
-            Texto
+            Recém-formado em Análise e Desenvolvimento de Sistemas pelo IFSP Jacareí, foi desenvolvedor full stack para a plataforma IFVest durante 2023, recriando a plataforma em uma nova linguagem e adicionando novas funcionalidades. Atualmente, busco oportunidades para aplicar meus conhecimentos em projetos desafiadores e RPGs de mesa.
           </p>
         </div>
       </div>
@@ -94,7 +94,7 @@
     <div class="card" data-index="0">
       <div class="card__inner">
         <div class="card__image-container">
-          <img class="card__image" src="/img/desenvolvedores/perfil.png" alt=""/>
+          <img class="card__image" src="/img/desenvolvedores/Rafaela.png" alt=""/>
         </div>
         <div class="card__content">
           <h1 class="card__title">Rafaela Machado</h1>
